<resources>
    <string name="app_name">WeShare</string>
    <string name="tx_home">首頁</string>
    <string name="tx_memberCentre">會員中心</string>
    <string name="tx_goodsManage">物資管理</string>
    <string name="tx_feedback">意見回饋</string>
    <string name="tx_updateMember">修改會員</string>
    <string name="tx_history">歷史評語</string>
    <string name="tx_goodsBox">物資箱</string>
    <string name="tx_goodsMsg">物流資訊</string>
    <string name="tx_homeIndex">首頁</string>
    <string name="tx_open">開啟</string>
    <string name="tx_close">關閉</string>

    <string name="tx_wishPool">許願池</string>
    <string name="tx_loveTo">送愛心</string>
    <string name="tx_changeStuff">以物易物</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tx_welfareInstitution">社福機構</string>
    <string name="tx_search">探詢</string>
    <string name="tx_message">訊息</string>
    <string name="tx_account">帳號</string>
    <string name="tx_passqord">密碼</string>
    <string name="tx_login">登入</string>
    <string name="tx_register">註冊</string>
    <string name="tx_fpassword">忘記密碼</string>
    <string name="tx_googleLogin">Google登入</string>
    <string name="tx_facebookLogin">Fackbook登入</string>
    <string name="tx_updatePictureNote">點選照片來進行更換</string>
    <string name="tx_cancel">取消</string>
    <string name="tx_enter">確認</string>
    <string name="tx_stuffName">商品名稱</string>
    <string name="tx_details">查看詳情</string>
    <string name="tx_noUser">沒輸入帳密</string>
    <string name="msg_accountNull">帳號空白</string>
    <string name="msg_passwordNull">密碼空白</string>
    <string name="msg_RegisterFail">註冊失敗</string>
    <string name="msg_RegisterSuccess">註冊成功</string>
    <string name="msg_NoNetwork">尚未連接網路</string>
    <string name="msg_nameNull">名子空白</string>
    <string name="tx_personal">個人</string>
    <string name="tx_instiution">社福機構</string>
    <string name="msg_AccountRepeat">帳號重複</string>
    <string name="msg_LoginFail">登入失敗</string>
    <string name="msg_LoginSuccess">登入成功</string>
    <string name="msg_NoGoodsFound">找不到物資</string>
    <string name="text_GoodsUpdate">goodsupdate</string>
    <string name="msg_NoImage">No image was added</string>
    <string name="msg_InsertFail">新增失敗</string>
    <string name="msg_InsertSuccess">恭喜~新增成功!</string>
    <string name="msg_NameIsInvalid">名稱不為空白</string>
    <string name="tx_logout">登出</string>

    <string name="msg_PWNotRight">舊密碼不正確</string>
    <string name="msg_PWNotSame">新密碼與驗證不同</string>

    <string name="msg_QtyIsInvalid">請填入數量</string>
    <string name="msg_DateIsInvalid">請選擇日期</string>
    <string name="msg_QtyIncorrect">"數量"請勿填入整數數字以外的資訊</string>
    <string name="msg_NewpasswordNull">新密碼空白</string>
    <string name="msg_checkPasswordNull">驗證密碼空白</string>
    <string name="msg_NewPasswordNull">新密碼空白</string>
    <string name="msg_updateFail">更新失敗</string>
    <string name="msg_updateSuccess">更新成功</string>
    <string name="tx_changePassword">更改密碼</string>
    <string name="msg_updateSuccessAndLogin">修改成功，請重新登入</string>
    <string name="tx_cancelChange">取消更改密碼</string>
    <string name="tx_registerInd">個人會員</string>
    <string name="tx_registerOrg">社福團體</string>
    <string name="tx_registerLater">稍後註冊</string>
    <string name="tx_defualtPicture">預設圖片</string>
    <string name="tx_help">小幫手</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tx_registerOrgOne">註冊社福</string>
    <string name="tx_next">下一步</string>
    <string name="tx_UpState">上一步</string>
    <string name="tx_enterUpdate">確認修改</string>
    <string name="tx_updateOrg">修改社福資訊</string>
    <string name="tx_updateInd">修改會員資訊</string>
    <string name="tx_UpdateOrg">社福修改</string>
    <string name="tx_UpdateInd">個人修改</string>
    <string name="tx_back">返回</string>
    <string name="tx_update">修改資料</string>
    <string name="msg_NoMsgsFound">尚未有訊息</string>
    <string name="tx_replyMsg">回復訊息</string>
    <string name="msg_SendFail">寄送失敗</string>
    <string name="msg_deleteFail">刪除失敗</string>
    <string name="msg_deleteSuccess">刪除成功</string>
    <string name="text_GoodsInsert">新增物資</string>
    <string name="text_GoodsBox">物資箱</string>
    <string name="text_GoodsInfo">物資資訊</string>
    <string name="tx_goodsDetail">物資資訊</string>
    <string name="msg_qtyNull">數量空白</string>
    <string name="msg_qtyMax">超過需求數量</string>
    <string name="msg_dealFail">交易失敗</string>
    <string name="msg_dealSuccess">交易成功</string>
    <string name="msg_sameAccount">這是您的資訊</string>
    <string name="tx_dealDetail">交易訂單</string>
    <string name="msg_dealRefuse">交易已拒絕</string>
    <string name="msg_feedbackNull">評價不可空白</string>
    <string name="msg_SendSuccess">評價成功</string>
    <string name="msg_fbSuccess">評價成功</string>
    <string name="msg_fbFail">評價失敗</string>
    <string name="msg_NoInstFound">找不到相對應的社福</string>
    <string name="msg_LocationNameNotFound">查無所在地</string>
    <string name="tx_searchAddress">查詢地址</string>
    <string name="text_MessageEmpty">訊息為空</string>
    <string name="text_LeftChatRoom">離開聊天室</string>
    <string name="msg_SendSuccess1">您的訊息已寄出</string>
    <string name="msg_LoginFailAndCheck">登入失敗，請確認您的帳號密碼</string>
    <string name="msg_DeadLineIsInvalid">請勿輸入小於現在時間的日期</string>

</resources>
