<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_goodsBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_wishPool" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_loveTo" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_changeStuff" />
    </android.support.design.widget.TabLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--SwipeRefreshLayout下拉更新-->
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/gb_swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvGoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <!-- build.gradle (Module:app) must add [com.android.support:design] API -->
        <!--配合FloatingActionButton，讓加號按鈕有浮起來的效果-->
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <!--FloatingActionButton開新的一頁做新增，那個加號按鈕-->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="24dp"
                android:src="@drawable/ic_add"
                app:elevation="6dp"
                android:onClick="newGoods"
                app:rippleColor="#FFFFFF" />
        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>
</LinearLayout>
